added scroll in header, minor bug fixes

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
        </div>
         </div>
              <a href="#about">
-<!--     <svg class="scroll" width="130" height="52">
-              <use xlink:href="#scroll"></use>      
-          </svg> -->
+                <img class="scroll" src="img/scroll.png">
           </a>
    </div> 
     </header>
@@ -254,9 +252,9 @@ you'd like to discuss, contact with me!</p>
           <span class="address__title">ADDRESS</span>
           <span class="address__subtitle">123 City name, Street, City, Country</span>
           <span class="address__title">EMAIL</span>
-          <span class="address__subtitle">cahee@domain.com</span>
+          <a href="mailto:cahee@domain.com" class="address__subtitle">cahee@domain.com</a>
           <span class="address__title">PHONE</span>
-          <span class="address__subtitle">+012 345 6789</span>
+          <a href="+012 345 6789" class="address__subtitle">+012 345 6789</a>
         </div>
       </div>
     </div>
